add slick carousel to projects home page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,6 +26,6 @@
   $('#nav-bar').removeClass();
   $('#login-bar').hide();
   $('#nav-bar').addClass('col-md-12');
-  $('.nav-link').removeClass();
+  $('.nav-link').removeClass('nav-highlight');
   $('.blog-link').addClass('nav-highlight');
 </script>
