--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -12,9 +12,9 @@
   </p>
   <p class="standard-text">
     Or visit me at the following social media websites:<br>
-  <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("linkedin-icon.png", class: "icon") %></a>
-  <a href="https://github.com/jamesponeal"><%= image_tag("github-icon.png", class: "icon") %></a>
-  <a href="https://twitter.com/jamesponeal"><%= image_tag("twitter-icon.png", class: "icon") %></a>
+  <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("icons/linkedin-icon.png", class: "icon") %></a>
+  <a href="https://github.com/jamesponeal"><%= image_tag("icons/github-icon.png", class: "icon") %></a>
+  <a href="https://twitter.com/jamesponeal"><%= image_tag("icons/twitter-icon.png", class: "icon") %></a>
   </p>
   </center>
 </div>
@@ -23,6 +23,5 @@
   $('#nav-bar').removeClass();
   $('#login-bar').hide();
   $('#nav-bar').addClass('col-md-12');
-  $('.nav-link').removeClass('nav-highlight');
   $('.about-link').addClass('nav-highlight');
 </script>
