--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -1,9 +1,90 @@
+/* -- FONTS -- */
+
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 200;
   src: local('Open Sans'), local('OpenSans'), url('http://themes.googleusercontent.com/static/fonts/opensans/v5/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff') format('woff');
 }
+
+@import url(https://fonts.googleapis.com/css?family=BenchNine:400,300);
+
+.index-title {
+  position: absolute;
+  top: 32px;
+  width: 100%;
+  text-align: center;
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  font-size: 36px;
+}
+
+.standard-text{
+  font-family: 'Open Sans',arial,sans-serif;
+  font-weight: 200;
+  font-size: 16px;
+}
+
+.text-14p{
+  font-family: 'open sans',arial,sans-serif;
+  font-size: 14px;
+}
+
+.text-12p{
+  font-family: 'open sans',arial,sans-serif;
+  font-size: 12px;
+}
+
+.text-10p{
+  font-family: 'open sans',arial,sans-serif;
+  font-size: 10px;
+}
+
+.courier-standard{
+  font-family: 'Courier New', 'Courier', monospace;
+  font-size: 16px;
+}
+
+h1{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+}
+
+h2{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+h3{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+h4{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  margin-top: 0px;
+}
+
+.blog-signature{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  font-size: 20px;
+}
+
+/* -- END FONTS -- */
+
+
+/* -- BACKGROUNDS -- */
 
 .background-2e342a{
   background-color: #2e342a;
@@ -20,6 +101,46 @@
 .background-f0f0f5{
   background-color: #f0f0f5;
 }
+
+/* -- END BACKGROUNDS -- */
+
+
+/* -- NAV BAR -- */
+
+.nav-highlight{
+  border: 1px solid #337ab7;
+  border-radius: 3px;
+}
+
+.nav-link{
+  margin: 2px;
+  padding: 2px;
+}
+
+nav {
+  text-align: center;
+  background-color: black;
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  font-size: 20px;
+  height: 35px;
+  line-height: 35px;
+}
+
+
+nav:hover{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  text-decoration: none;
+}
+
+nav:visited{
+  color: #337ab7;
+}
+
+/* -- END NAV BAR -- */
 
 .icon {
   height: 3em;
@@ -43,14 +164,12 @@
   top: 80px;
 }
 
-.index-title {
-  position: absolute;
-  top: 32px;
+.width-100 {
   width: 100%;
-  text-align: center;
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  font-size: 36px;
+}
+
+.z-1 {
+  z-index:-1;
 }
 
 .align-right{
@@ -63,40 +182,11 @@
   margin-left: 1em;
 }
 
-.standard-text{
-  font-family: 'open sans',arial,sans-serif;
-  /*color: #f2f2f2;*/
-  font-size: 16px;
-}
-
-.text-14p{
-  font-family: 'open sans',arial,sans-serif;
-  /*color: #f2f2f2;*/
-  font-size: 14px;
-}
-
-.text-12p{
-  font-family: 'open sans',arial,sans-serif;
-  /*color: #f2f2f2;*/
-  font-size: 12px;
-}
-
-.text-10p{
-  font-family: 'open sans',arial,sans-serif;
-  /*color: #f2f2f2;*/
-  font-size: 10px;
-}
-
 
 .v-align{
   vertical-align: bottom;
 }
 
-.courier-standard{
-  font-family: 'Courier New', 'Courier', monospace;
-  /*color: #f2f2f2;*/
-  font-size: 16px;
-}
 
 .no-bullets{
   list-style-type: none;
@@ -131,7 +221,6 @@
 }
 
 
-
 .blog-row{
   width: 80%;
   margin: 0 auto;
@@ -144,63 +233,6 @@
 
 .center-me {
   margin: 0 auto;
-}
-
-h1{
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-}
-
-h2{
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-  margin-top: 15px;
-  margin-bottom: 0px;
-}
-
-h4{
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-  margin-top: 0px;
-}
-
-.blog-signature{
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-  font-size: 20px;
-}
-
-.nav-highlight{
-  background-color: #2e342a;
-  border-radius: 3px;
-  padding: 1px;
-}
-
-nav {
-  text-align: center;
-  background-color: black;
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-  font-size: 20px;
-  height: 35px;
-  line-height: 35px;
-}
-
-
-nav:hover{
-  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
-  font-weight: 100;
-  color: #337ab7;
-  text-decoration: none;
-}
-
-nav:visited{
-  color: #337ab7;
 }
 
 .code {
@@ -228,6 +260,144 @@ nav:visited{
   background-color: #202020;
   color: #B0B0B0;
 }
+
+/* -- SLICK CAROUSEL -- */
+
+.slick-text{
+  font-family: 'BenchNine', sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  margin-top: 4px;
+  text-align: center;
+}
+
+.slick-container {
+  background-color: #f0f0f5;
+  border-radius: 10px;
+  height: 200px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.slick-image{
+  width: 100%;
+  height: 90%;
+  padding: 2px;
+  border: 2px solid #337ab7;
+  border-radius: 8px;
+}
+
+.slick-dots li button:before {
+  font-size: 50px;
+  color: #000000;
+  top: 20px;
+}
+.slick-dots li.slick-active button:before {
+  color: #000000;
+}
+
+@media (max-width: 1000px) {
+  .slides p {
+    font-size: 18px;
+  }
+  .grid-fifth {
+    width: 27.333333%;
+    margin: 0 3%;
+  }
+}
+
+@media (max-width: 700px) {
+  .logo {
+    float: none;
+    margin: 20px auto 0;
+  }
+  .grid-half {
+    width: 80%;
+    margin: 0 10%;
+  }
+  .grid-third {
+    width: 80%;
+    margin: 0 10%;
+  }
+  .grid-fifth {
+    width: 80%;
+    margin: 0 10%;
+  }
+  .row {
+    padding: 0 10px;
+  }
+  nav {
+    width: 100%;
+  }
+  nav a {
+    transition: 0s;
+    width: 33.333333%;
+    float: left;
+    padding: 0;
+    margin: 10px 0 0;
+    text-align: center;
+  }
+  .description {
+    display: none;
+  }
+  .slide img {
+    width: 80%;
+    margin: 100px 10%;
+  }
+
+  .frame {
+    margin: 40px 0 0;
+  }
+  .item {
+    margin-bottom: 60px;
+  }
+  .item h3 {
+    margin-top: 20px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+}
+
+.slick-prev{
+  left:-50px;
+}
+
+.slick-prev::after {
+    color: black;
+    font-size: 18px;
+    padding-right: 0.5em;
+}
+
+.slick-next::after {
+    color: black;
+    font-size: 18px;
+    padding-right: 0.5em;
+}
+
+.slick-prev::after {
+    content: "\f137";
+    font-family: FontAwesome;
+    color: #000;
+    font-size: 18px;
+    padding-right: 0.5em;
+}
+
+.slick-next::after {
+    content: "\f138";
+    font-family: FontAwesome;
+    color: #000;
+    font-size: 18px;
+    margin-right: 0.5em;
+    padding-right: 0.5em;
+}
+
+
+/* -- END SLICK -- */
+
+
+
+/* -- MARGIN AND PADDING -- */
 
 .mar-b-1 {
   margin-bottom: 1em;
@@ -406,6 +576,10 @@ nav:visited{
   padding-left: 5em;
 }
 
+/* -- END MARGIN AND PADDING -- */
+
+/* -- PIPE SEPARATING -- */
+
 .pipe-separate {
   padding-left: 1em;
   padding-right: 1em;
@@ -421,13 +595,10 @@ nav:visited{
   border-right: none;
 }
 
-.width-100 {
-  width: 100%;
-}
+/* -- END PIPE SEPARATING -- */
 
-.z-1 {
-  z-index:-1;
-}
+
+
 
 
 
