--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,15 @@
 <html>
 <head>
   <title>Jim's Page</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="assets/stylesheets/slick.css">
+  <link rel="stylesheet" href="assets/stylesheets/slick-theme.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body class="row background-FFFBF7">
-  <div class="col-md-1"> </div>
+  <div class="col-md-1"></div>
   <div class="col-md-10">
     <div class="row">
       <nav id="nav-bar" class="col-md-6">
@@ -27,11 +30,11 @@
           <% end %>
       </nav>
     </div>
-    <div id="append-login">
+    <div id="append-login"></div>
+    <div class="animsition">
+      <%= yield %>
     </div>
-
-    <%= yield %>
   </div>
-  <div class="col-md-1"> </div>
+  <div class="col-md-1"></div>
 </body>
 </html>
