adds active record reference sheet page to projects

--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -2,30 +2,38 @@
 <div class="row mar-t-1 mar-b-1">
   <div class="grid-full">
     <div class="projects">
-      <div class="slick-container">
+      <div class="slick-container"><!--Slide 1-->
         <%= image_tag("projects/blog_project.png", class: "slick-image") %>
-        <div class="slick-text">Ruby on Rails Object-Oriented Blog</div>
-      </div><!--/Slide 1-->
-      <div class="slick-container">
+        <div class="slick-text">Personal Blog: Ruby on Rails Object-Oriented Project</div>
+      </div>
+      <div class="slick-container"><!--Slide 2-->
         <%= image_tag("projects/flickr_api_project.png", class: "slick-image") %>
-        <div class="slick-text">JavaScript, jQuery, and Ajax Flickr Web App</div>
-      </div><!--/Slide 2-->
-      <div class="slick-container">
+        <div class="slick-text">Flickr Photo Scraping Tool: JavaScript, jQuery, and Ajax Flickr Web App</div>
+      </div>
+      <div class="slick-container"><!--Slide 3-->
         <%= image_tag("projects/ooj_quiz_project.png", class: "slick-image") %>
-        <div class="slick-text">Object-Oriented JavaScript and jQuery Quiz</div>
-      </div><!--/Slide 3-->
-      <div class="slick-container">
+        <div class="slick-text">My Movie Quiz: Object-Oriented JavaScript and jQuery</div>
+      </div>
+      <div class="slick-container"><!--Slide 4-->
         <%= image_tag("projects/studionow_project.png", class: "slick-image") %>
-        <div class="slick-text">Ruby on Rails Object-Oriented Web App</div>
-      </div><!--/Slide 4-->
-      <div class="slick-container">
+        <div class="slick-text">StudioNow: Ruby on Rails Object-Oriented Web App</div>
+      </div>
+      <div class="slick-container"><!--Slide 5-->
         <%= image_tag("projects/wikijamz_project.png", class: "slick-image") %>
-        <div class="slick-text">Ruby on Rails Object-Oriented Web App</div>
-      </div><!--/Slide 5-->
-      <div class="slick-container">
+        <div class="slick-text">Wikijamz: Ruby on Rails Object-Oriented Web App</div>
+      </div>
+      <div class="slick-container"><!--Slide 6-->
         <%= image_tag("projects/tic-tac-toe_project.png", class: "slick-image") %>
-        <div class="slick-text">Ruby Command Line App with AI Computer Player</div>
-      </div><!--/Slide 6-->
+        <div class="slick-text">Tic Tac Toe: Ruby Command Line App with AI Computer Player</div>
+      </div>
+      <div class="slick-container"><!--Slide 7-->
+        <%= image_tag("projects/sql-img.png", class: "slick-image") %>
+        <div class="slick-text">SQL Reference Sheet</div>
+      </div>
+      <div class="slick-container"><!--Slide 8-->
+        <%= link_to image_tag("projects/ruby-on-rails.png", class: "slick-image"), active_record_path %>
+        <div class="slick-text">Active Record Reference Sheet</div>
+      </div>
     </div>
   </div>
 </div>
