--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -105,6 +105,24 @@ h4{
 /* -- END BACKGROUNDS -- */
 
 
+/* -- TABLE -- */
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+/* -- END TABLE -- */
+
+
 /* -- NAV BAR -- */
 
 .nav-highlight{
@@ -162,6 +180,10 @@ nav:visited{
   left: 50%;
   margin-left: -108px;
   top: 80px;
+}
+
+.width-80 {
+  width: 80%;
 }
 
 .width-100 {
@@ -238,12 +260,13 @@ nav:visited{
 .code {
   width: 55%;
   font-family: "Courier New", Courier, monospace;
-  font-size: 12px;
+  font-size: 14px;
   border: 1px solid black;
   border-radius: 5px;
   padding-left: 0.5em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
+  padding-right: 0.5em;
   background-color: #202020;
   color: #B0B0B0;
 }
@@ -251,12 +274,13 @@ nav:visited{
 .codewide {
   width: 90%;
   font-family: "Courier New", Courier, monospace;
-  font-size: 12px;
+  font-size: 14px;
   border: 1px solid black;
   border-radius: 5px;
   padding-left: 0.5em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
+  padding-right: 0.5em;
   background-color: #202020;
   color: #B0B0B0;
 }
@@ -265,7 +289,7 @@ nav:visited{
 
 .slick-text{
   font-family: 'BenchNine', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 14px;
   margin-top: 4px;
   text-align: center;
@@ -274,7 +298,7 @@ nav:visited{
 .slick-container {
   background-color: #f0f0f5;
   border-radius: 10px;
-  height: 200px;
+  height: 220px;
   padding: 10px;
   margin: 10px;
 }
@@ -288,7 +312,7 @@ nav:visited{
 }
 
 .slick-dots li button:before {
-  font-size: 50px;
+  font-size: 20px;
   color: #000000;
   top: 20px;
 }
