adds more links to projects page

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -19,6 +19,11 @@
   font-size: 36px;
 }
 
+.text-18p{
+  font-family: 'open sans',arial,sans-serif;
+  font-size: 18px;
+}
+
 .standard-text{
   font-family: 'Open Sans',arial,sans-serif;
   font-weight: 200;
@@ -272,7 +277,7 @@ nav:visited{
 }
 
 .codewide {
-  width: 90%;
+  width: 100%;
   font-family: "Courier New", Courier, monospace;
   font-size: 14px;
   border: 1px solid black;
