--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -15,11 +15,11 @@
         <div class="slick-text">My Movie Quiz: Object-Oriented JavaScript and jQuery</div>
       </div>
       <div class="slick-container"><!--Slide 4-->
-        <%= image_tag("projects/studionow_project.png", class: "slick-image") %>
+        <a href="http://studionow.herokuapp.com/"><%= image_tag("projects/studionow_project.png", class: "slick-image") %></a>
         <div class="slick-text">StudioNow: Ruby on Rails Object-Oriented Web App</div>
       </div>
       <div class="slick-container"><!--Slide 5-->
-        <%= image_tag("projects/wikijamz_project.png", class: "slick-image") %>
+        <a href="http://wikijamz.herokuapp.com/"><%= image_tag("projects/wikijamz_project.png", class: "slick-image") %></a>
         <div class="slick-text">Wikijamz: Ruby on Rails Object-Oriented Web App</div>
       </div>
       <div class="slick-container"><!--Slide 6-->
@@ -27,7 +27,7 @@
         <div class="slick-text">Tic Tac Toe: Ruby Command Line App with AI Computer Player</div>
       </div>
       <div class="slick-container"><!--Slide 7-->
-        <%= image_tag("projects/sql-img.png", class: "slick-image") %>
+        <%= link_to image_tag("projects/sql-img.png", class: "slick-image"), sql_path %>
         <div class="slick-text">SQL Reference Sheet</div>
       </div>
       <div class="slick-container"><!--Slide 8-->
