--- a/app/views/projects/active_record.html.erb
+++ b/app/views/projects/active_record.html.erb
@@ -1,11 +1,11 @@
 <h2>Active Record Reference Sheet</h2>
 <h4>by Jim O'Neal on February 15, 2016</h4>
 
-<div class="blog-container mar-t-1 mar-b-1">
+<div class="blog-container-wide mar-t-1 mar-b-1">
   <p class="standard-text">ActiveRecord is a Ruby library for working with Relational SQL Databases like MySQL. It provides an Object Relational Mapping (ORM) with these core features: a single Ruby object maps to a database table.</p>
   <p class="standard-text">Below are a list of common commands and notes that may be helpful to set up your Active Record database for a Ruby application.</p>
 
-  <p class="standard-text"><u>FROM THE COMMAND LINE:</u></p>
+  <p class="text-18p"><strong>FROM THE COMMAND LINE:</strong></p>
 
   <table>
     <tr>
@@ -42,8 +42,8 @@
     </tr>
   </table>
   <br>
-  <p class="standard-text"><u>FROM THE RAKE CONSOLE</u> <i>(and also from any Ruby file connected to an Active Record database):</i><br>
-  The rake console can be used to generate SQL queries via the Active Record ORM.  Below are some examples of common commands that might be used (using a 'dogs' table and 'Dog' class as an example):</p>
+  <p class="text-18p"><strong>FROM THE RAKE CONSOLE</strong></p>
+  <p class="standard-text">The rake console can be used to generate SQL queries via the Active Record ORM.  These commands can also be used from within Ruby and Ruby on Rails applications.  Below are some examples of common commands that might be used (using a 'dogs' table and 'Dog' class as an example):</p>
 
   <table>
     <tr>
@@ -112,57 +112,22 @@
     </tr>
   </table>
   <br>
-  <p class="standard-text"><u>BASIC MODEL FILE EXAMPLES:</u></p>
 
-  <p class="code">class Guess < ActiveRecord::Base<br>
-    &nbsp;&nbsp;belongs_to :user<br>
-    &nbsp;&nbsp;belongs_to :card<br>
-    &nbsp;&nbsp;belongs_to :round<br>
-  end</p>
+  <p class="text-18p"><strong>SCHEMA, MODEL, AND MIGRATION FILE EXAMPLES:</strong></p>
 
-  <p class="code">class User < ActiveRecord::Base<br>
-    &nbsp;&nbsp;has_many :guesses<br>
-    &nbsp;&nbsp;has_many :rounds<br>
-    &nbsp;&nbsp;has_many :cards, through: :guesses<br>
-    &nbsp;&nbsp;has_many :decks, through: :rounds<br>
-  end</p>
-
-  <p class="standard-text"><u>BASIC MIGRATION FILE EXAMPLES:</u></p>
-
-  <p class="code">class CreateEntries < ActiveRecord::Migration<br>
-    &nbsp;&nbsp;def change<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;create_table :entries do |t|<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.string :title, { limit: 64, null: false }<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.text :body, { null: false }<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.timestamps(null: false)<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;end<br>
-    &nbsp;&nbsp;end<br>
-  end</p>
-
-  <p class="code">class CreateGuesses < ActiveRecord::Migration<br>
-    &nbsp;&nbsp;def change<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;create_table :guesses do |t|<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.references    :user<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.references    :card<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.boolean       :correct?<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t.timestamps(null: false)<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;end<br>
-    &nbsp;&nbsp;end<br>
-  end</p>
-
-  <p class="standard-text"><u>COMPLEX SCHEMA, MODEL, AND MIGRATION FILE EXAMPLES:</u></p>
+  <p class="standard-text"><i>Schema:</i></p>
 
   <%= image_tag("projects/shirts-schema.png", class: "width-80 mar-b-1") %>
 
-  <p class="standard-text"><u><i>Model Files:</u></i></p>
+  <p class="standard-text"><i>Model Files:</i></p>
 
   <p class="codewide">class User < ActiveRecord::Base<br>
-    has_many :designed_shirts, { :class_name => "Shirt", :foreign_key => :designer_id }<br>
-    has_many :purchases, { :foreign_key => :purchaser_id}<br>
-    has_many :purchased_shirts, { :through => :purchases, :source => :shirt}<br>
-    has_many :sales, { :through => :designed_shirts}<br>
-    has_many :clients, { :through => :sales, :source => :purchaser}<br>
-    has_many :supported_designers, { :through => :purchased_shirts, :source => :designer}<br>
+    &nbsp;&nbsp;has_many :designed_shirts, { :class_name => "Shirt", :foreign_key => :designer_id }<br>
+    &nbsp;&nbsp;has_many :purchases, { :foreign_key => :purchaser_id}<br>
+    &nbsp;&nbsp;has_many :purchased_shirts, { :through => :purchases, :source => :shirt}<br>
+    &nbsp;&nbsp;has_many :sales, { :through => :designed_shirts}<br>
+    &nbsp;&nbsp;has_many :clients, { :through => :sales, :source => :purchaser}<br>
+    &nbsp;&nbsp;has_many :supported_designers, { :through => :purchased_shirts, :source => :designer}<br>
   end</p>
 
   <p class="code">class Shirt < ActiveRecord::Base<br>
@@ -177,7 +142,7 @@
   end</p>
 
 
-  <p class="standard-text"><u><i>Migration Files:</u></i></p>
+  <p class="standard-text"><i>Migration Files:</i></p>
 
   <p class="code">class CreateUsers < ActiveRecord::Migration<br>
     &nbsp;&nbsp;def change<br>
