--- a/app/views/projects/sql.html.erb
+++ b/app/views/projects/sql.html.erb
@@ -1,7 +1,7 @@
 <h2>SQL Reference Sheet</h2>
 <h4>by Jim O'Neal on January 6, 2016</h4>
 
-<div class="blog-container mar-t-1 mar-b-1">
+<div class="blog-container-wide mar-t-1 mar-b-1">
   <p class="standard-text">SQL is a programming language designed to manipulate and manage data stored in relational databases. A relational database is a database that organizes information into one or more tables. A table is a collection of data organized into rows and columns. A statement is a string of characters that the database recognizes as a valid command.</p>
   <p class="text-18p"><strong>SQL BASICS:</strong></p>
   <p class="text-14p">
