--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -11,7 +11,8 @@
         <div class="slick-text">Flickr Photo Scraping Tool: JavaScript, jQuery, and Ajax Flickr Web App</div>
       </div>
       <div class="slick-container"><!--Slide 3-->
-        <%= image_tag("projects/ooj_quiz_project.png", class: "slick-image") %>
+        <!--<a href="http://jamesponeal.github.io/projects/quiz/index.html"><%= image_tag("projects/ooj_quiz_project.png", class: "slick-image") %></a>-->
+        <%= link_to image_tag("projects/ooj_quiz_project.png", class: "slick-image"), quiz_path  %>
         <div class="slick-text">My Movie Quiz: Object-Oriented JavaScript and jQuery</div>
       </div>
       <div class="slick-container"><!--Slide 4-->
