--- a/app/views/projects/active_record.html.erb
+++ b/app/views/projects/active_record.html.erb
@@ -2,7 +2,13 @@
 <h4>by Jim O'Neal on February 15, 2016</h4>
 
 <div class="blog-container-wide mar-t-1 mar-b-1">
-  <p class="standard-text">ActiveRecord is a Ruby library for working with Relational SQL Databases like MySQL. It provides an Object Relational Mapping (ORM) with these core features: a single Ruby object maps to a database table.</p>
+  <p class="standard-text">ActiveRecord is a Ruby library for working with Relational SQL Databases like MySQL. It provides an Object Relational Mapping (ORM) with these core features:</p>
+  <ul class="standard-text">
+    <li>A single Ruby object maps to a database table.</li>
+    <li>Columns are accessed by methods, and are inferred from the database schema.</li>
+    <li>Methods for create, read, update, and delete (CRUD) are defined.</li>
+    <li>A Domain Specific Language (DSL) for easily constructing SQL queries in Ruby.</li>
+  </ul>
   <p class="standard-text">Below are a list of common commands and notes that may be helpful to set up your Active Record database for a Ruby application.</p>
 
   <p class="text-18p"><strong>FROM THE COMMAND LINE:</strong></p>
