adds 512 game to project list

--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -8,12 +8,11 @@
       </div>
       <div class="slick-container"><!--Slide 2-->
         <%= link_to image_tag("projects/flickr_api_project.png", class: "slick-image"), flickr_path %>
-        <div class="slick-text">Flickr Photo Scraping Tool: JavaScript, jQuery, and Ajax Flickr Web App</div>
+        <div class="slick-text">Flickr Photo Scraping Tool: Javascript, jQuery, and Ajax Flickr Web App</div>
       </div>
       <div class="slick-container"><!--Slide 3-->
-        <!--<a href="http://jamesponeal.github.io/projects/quiz/index.html"><%= image_tag("projects/ooj_quiz_project.png", class: "slick-image") %></a>-->
         <%= link_to image_tag("projects/ooj_quiz_project.png", class: "slick-image"), quiz_path  %>
-        <div class="slick-text">My Movie Quiz: Object-Oriented JavaScript and jQuery</div>
+        <div class="slick-text">My Movie Quiz: Object-Oriented Javascript and jQuery</div>
       </div>
       <div class="slick-container"><!--Slide 4-->
         <a href="http://studionow.herokuapp.com/"><%= image_tag("projects/studionow_project.png", class: "slick-image") %></a>
@@ -24,8 +23,8 @@
         <div class="slick-text">Wikijamz: Ruby on Rails Object-Oriented Web App</div>
       </div>
       <div class="slick-container"><!--Slide 6-->
-        <%= image_tag("projects/tic-tac-toe_project.png", class: "slick-image") %>
-        <div class="slick-text">Tic Tac Toe: Ruby Command Line App with AI Computer Player</div>
+        <%= link_to image_tag("projects/512game.png", class: "slick-image"), "http://512game.bitballoon.com/" %>
+        <div class="slick-text">512 Tile Game: Object-Oriented Javascript and jQuery</div>
       </div>
       <div class="slick-container"><!--Slide 7-->
         <%= link_to image_tag("projects/sql-img.png", class: "slick-image"), sql_path %>
