--- a/app/views/welcome/resume.html.erb
+++ b/app/views/welcome/resume.html.erb
@@ -1,5 +1,5 @@
 <div class="row resume mar-t-1 mar-b-1">
-  <%= image_tag("ONeal_Resume_2016.jpg", class: "width-100 pad-1") %>
+  <%= image_tag("ONeal_Resume.jpg", class: "width-100 pad-1") %>
 </div>
 <script>
   $('#login-bar').removeClass();
