adds link to angular todo site

--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -34,6 +34,10 @@
         <%= link_to image_tag("projects/ruby-on-rails.png", class: "slick-image"), active_record_path %>
         <div class="slick-text">Active Record Reference Sheet</div>
       </div>
+      <div class="slick-container"><!--Slide 9-->
+        <%= link_to image_tag("projects/angular_todo.png", class: "slick-image"), "http://jims-angular-todo-list.bitballoon.com/" %>
+        <div class="slick-text">Todo List: AngularJS</div>
+      </div>
     </div>
   </div>
 </div>
