--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Blog Posts</h1>
 
-<div class="blog-container">
+<div class="blog-container-wide">
   <% if logged_in? %>
     <% if current_user.admin %>
       <%= link_to 'Create New Blog Post', new_post_path %>
@@ -9,9 +9,9 @@
   <% if @posts %>
     <ul class="no-bullets">
       <% @posts.reverse.each do |post| %>
-        <li class="mar-t-1">
+        <li class="mar-t-05">
           <%= link_to post_path(post) do %>
-            <button type="button" class="btn btn-primary btn-lg btn-block">
+            <button type="button" class="btn btn-primary btn-xs btn-block">
                 <span class="standard-text align-left"><%= post.title %></span><span class="standard-text align-right"><%= post.created_at.strftime('%B %d, %Y') %></span>
             </button>
           <% end %>
@@ -20,12 +20,22 @@
     </ul>
   <% end %>
 </div>
+<div class="row mar-t-2">
+  <div class="blog-container"><center>
+    <p class="standard-text">Hi there, my name is Jim.  Welcome to my website!</p>
+    <p class="standard-text">I built this website from scratch using HTML, CSS, Ruby on Rails, JavaScript, and jQuery.<br>I am using a PostgreSQL database hosted on Heroku.</p>
+    <p class="standard-text">To learn more about me, check out my <%= link_to 'About Me', about_path %> page, <%= link_to 'Resume', resume_path %>, or visit my <%= link_to 'Projects', home_path %> page!</p>
+    <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("icons/linkedin-icon.png", class: "icon") %></a>
+    <a href="https://github.com/jamesponeal"><%= image_tag("icons/github-icon.png", class: "icon") %></a>
+    <a href="https://twitter.com/jamesponeal"><%= image_tag("icons/twitter-icon.png", class: "icon") %></a>
+  </center></div>
+</div>
 
 <script>
   $('#login-bar').removeClass();
   $('#nav-bar').removeClass();
-  $('#login-bar').hide();
-  $('#nav-bar').addClass('col-md-12');
+  $('#login-bar').addClass('col-md-5');
+  $('#nav-bar').addClass('col-md-7');
   $('.nav-link').removeClass('nav-highlight');
   $('.blog-link').addClass('nav-highlight');
 </script>
