--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,57 @@
 <h2><%= @post.title %></h2>
 <h4>by Jim O'Neal on <%= @post.created_at.strftime('%B %d, %Y') %></h4>
 
-<div class="blog-container">
-  <div class="standard-text">
-    <%= @post.content.html_safe %>
-  </div>
-  <% if logged_in? %>
-    <div class="mar-t-1">
-      <% if current_user.admin %>
-        <%= link_to 'Edit Post', edit_post_path(@post) %>
-      <% end %>
+<div class="col-md-9">
+  <div class="blog-show-container">
+    <div class="standard-text">
+      <%= @post.content.html_safe %>
     </div>
-  <% end %>
+    <% if logged_in? %>
+      <div class="mar-t-1">
+        <% if current_user.admin %>
+          <%= link_to 'Edit Post', edit_post_path(@post) %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="blog-show-container mar-t-1 mar-b-1">
+    <% if logged_in? %>
+      <div class="comment-link mar-b-1">
+        <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
+      </div>
+      <div id="append-comment-form"></div>
+    <% else %>
+      <p class="standard-text">Create an account or login to add a comment.</p>
+    <% end %>
+    <% if @comments %>
+      <ul>
+        <% @comments.reverse.each do |comment| %>
+          <li class="text-14p mar-b-1">
+            <%= comment.content.html_safe %><br>
+            <span class="text-12p"> - by <%= comment_author_name(comment) %> on <%= comment.created_at.strftime('%m-%d-%Y') %></span>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
 </div>
 
-<div class="blog-container mar-t-1 mar-b-1">
-  <% if logged_in? %>
-    <div class="comment-link mar-b-1">
-      <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
-    </div>
-    <div id="append-comment-form"></div>
-  <% else %>
-    <p class="standard-text">Create an account or login to add a comment.</p>
-  <% end %>
-  <% if @comments %>
-    <ul>
-      <% @comments.reverse.each do |comment| %>
-        <li class="text-14p mar-b-1">
-          <%= comment.content.html_safe %><br>
-          <span class="text-12p"> - by <%= comment_author_name(comment) %> on <%= comment.created_at.strftime('%m-%d-%Y') %></span>
+<div class="col-md-3">
+  <h4>Blog Entries:</h4>
+  <% if @posts %>
+    <ul class="no-bullets">
+      <% @posts.reverse.each do |post| %>
+        <li>
+          <%= link_to post_path(post) do %>
+            <%= post.title %>
+          <% end %>
         </li>
       <% end %>
     </ul>
   <% end %>
 </div>
+
 
 <script>
   $('#login-bar').removeClass();
