--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Projects</h1>
+<h1 class="mar-l-2">Projects</h1>
+
 <div class="row mar-t-1 mar-b-1">
-  <div class="grid-full">
+  <div class="col-md-1"></div>
+  <div class="grid-full col-md-10">
     <div class="projects">
       <div class="slick-container"><!--Slide 1-->
         <%= link_to image_tag("projects/blog_project.png", class: "slick-image"), posts_path %>
@@ -40,6 +42,7 @@
       </div>
     </div>
   </div>
+  <div class="col-md-1"></div>
 </div>
 <div class="row mar-t-3">
   <div class="blog-container"><center>
