--- a/app/views/welcome/resume.html.erb
+++ b/app/views/welcome/resume.html.erb
@@ -1,6 +1,8 @@
-<div class="row resume mar-t-1 mar-b-1">
+<div class="col-md-1"></div>
+<div class="col-md-10 resume mar-t-1 mar-b-1">
   <%= image_tag("ONeal_Resume.jpg", class: "width-100 pad-1") %>
 </div>
+<div class="col-md-1"></div>
 <script>
   $('#login-bar').removeClass();
   $('#nav-bar').removeClass();
