--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,18 @@
-<div class="row">
-  <%= image_tag("chicagoskyline.jpg", class: "skyline") %>
-  <div class="index-title">Welcome to Jim's Website</div>
-  <%= image_tag("jim1_cropped.jpg", class: "profilephoto") %>
-</div>
-<div class="row mar-t-2">
-  <div class="blog-container"><center>
-    <p class="standard-text">Hi there, my name is Jim.  Welcome to my website!</p>
-    <p class="standard-text">I built this website from scratch using HTML, CSS, Ruby on Rails, JavaScript, and jQuery.<br>I am using a PostgreSQL database hosted on Heroku.</p>
-    <p class="standard-text">To learn more about me, check out my <%= link_to 'About Me', about_path %> page, <%= link_to 'Resume', resume_path %>, or <%= link_to 'Blog', posts_path %>!<br>
-     Or to see what I've been working on visit my <%= link_to 'Projects', home_path %> page.</p>
-    <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("icons/linkedin-icon.png", class: "icon") %></a>
-    <a href="https://github.com/jamesponeal"><%= image_tag("icons/github-icon.png", class: "icon") %></a>
-    <a href="https://twitter.com/jamesponeal"><%= image_tag("icons/twitter-icon.png", class: "icon") %></a>
-  </center></div>
+<div id="skyline-background" class="height-46em row">
+    <div class="index-title">Welcome to Jim's Website
+    </div>
+    <div>
+      <center><%= image_tag("jim1_cropped.jpg", class: "profilephoto") %></center>
+    </div>
+    <div class="blog-container mar-t-1"><center>
+      <p class="standard-text">Hi there, my name is Jim.  Welcome to my website!</p>
+      <p class="standard-text">I built this website from scratch using HTML, CSS, Ruby on Rails, JavaScript, and jQuery.<br>I am using a PostgreSQL database hosted on Heroku.</p>
+      <p class="standard-text">To learn more about me, check out my <%= link_to 'About Me', about_path %> page, <%= link_to 'Resume', resume_path %>, or <%= link_to 'Blog', posts_path %>!<br>
+       Or to see what I've been working on visit my <%= link_to 'Projects', home_path %> page.</p>
+      <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("icons/linkedin-icon.png", class: "icon") %></a>
+      <a href="https://github.com/jamesponeal"><%= image_tag("icons/github-icon.png", class: "icon") %></a>
+      <a href="https://twitter.com/jamesponeal"><%= image_tag("icons/twitter-icon.png", class: "icon") %></a>
+    </center></div>
 </div>
 <script>
   $('#login-bar').removeClass();
