--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
-<h2><%= @post.title %></h2>
-<h4>by Jim O'Neal on <%= @post.created_at.strftime('%B %d, %Y') %></h4>
+<h2 class="mar-l-2"><%= @post.title %></h2>
+<h4 class="mar-l-4">by Jim O'Neal on <%= @post.created_at.strftime('%B %d, %Y') %></h4>
 
 <div class="col-md-9">
-  <div class="blog-show-container">
+  <div class="blog-show-container mar-l-4">
     <div class="standard-text">
       <%= @post.content.html_safe %>
     </div>
@@ -15,7 +15,7 @@
     <% end %>
   </div>
 
-  <div class="blog-show-container mar-t-1 mar-b-1">
+  <div class="blog-show-container mar-t-1 mar-b-1 mar-l-4">
     <% if logged_in? %>
       <div class="comment-link mar-b-1">
         <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
