fixes minor styling issues

--- a/app/views/projects/active_record.html.erb
+++ b/app/views/projects/active_record.html.erb
@@ -1,5 +1,5 @@
-<h2>Active Record Reference Sheet</h2>
-<h4>by Jim O'Neal on February 15, 2016</h4>
+<h2 class="mar-l-2">Active Record Reference Sheet</h2>
+<h4 class="mar-l-4">by Jim O'Neal on February 15, 2016</h4>
 
 <div class="blog-container-wide mar-t-1 mar-b-1">
   <p class="standard-text">ActiveRecord is a Ruby library for working with Relational SQL Databases like MySQL. It provides an Object Relational Mapping (ORM) with these core features:</p>
@@ -178,6 +178,7 @@
     &nbsp;&nbsp;end<br>
   end</p>
 </div>
+<div align=center><a href='http://www.counter12.com'><img src='http://www.counter12.com/img-7CbCZA31CY2Y8D8A-31.gif' border='0' alt='web counter free'></a><script type='text/javascript' src='http://www.counter12.com/ad.js?id=7CbCZA31CY2Y8D8A'></script></div>
 
 <script>
   $('#login-bar').removeClass();
