--- a/app/views/projects/flickr_api.html.erb
+++ b/app/views/projects/flickr_api.html.erb
@@ -1,4 +1,4 @@
-<h1>Flickr Photo Search</h1>
+<h2 class="mar-l-2">Flickr Photo Search</h2>
 <div class="blog-container-wide mar-t-1 mar-b-1">
     <div class="grid-100">
             <form><center>
