--- a/app/views/projects/movie_quiz.html.erb
+++ b/app/views/projects/movie_quiz.html.erb
@@ -1,5 +1,5 @@
-<h1>Jim's Movie Quiz</h1>
-<div class="blog-container-wide">
+<h2 class="mar-l-2">Jim's Movie Quiz</h2>
+<div class="blog-container-wide mar-t-1">
   <div id="internal">
     <h3 id="question"></h3>
     <div class="row mar-t-1">
