--- a/app/views/projects/sql.html.erb
+++ b/app/views/projects/sql.html.erb
@@ -1,5 +1,5 @@
-<h2>SQL Reference Sheet</h2>
-<h4>by Jim O'Neal on January 6, 2016</h4>
+<h2 class="mar-l-2">SQL Reference Sheet</h2>
+<h4 class="mar-l-4">by Jim O'Neal on January 6, 2016</h4>
 
 <div class="blog-container-wide mar-t-1 mar-b-1">
   <p class="standard-text">SQL is a programming language designed to manipulate and manage data stored in relational databases. A relational database is a database that organizes information into one or more tables. A table is a collection of data organized into rows and columns. A statement is a string of characters that the database recognizes as a valid command.</p>
